--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -55,7 +55,7 @@
 
 <div class="category_area mb-4">
   <div class="container">
-    <div class="row">
+    <div class="row pb-5">
       <!-- Filter Sidebar -->
       <div class="col-lg-3 mt-4 d-none d-lg-block">
         <div class="filter-sidebar bg-white p-4 rounded shadow-sm">
@@ -150,6 +150,7 @@
                       <a href="{% url 'wera_detail' j.slug %}" class="text-decoration-none">
                         <h5 class="text-primary mb-1">{{ j.title }}</h5>
                       </a>
+                      <br>
                       <div class="links_locat d-flex align-items-center mt-2">
                         <div class="location me-3">
                           <small class="text-muted">
