--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -55,6 +55,9 @@
 
 <div class="category_area mb-4">
   <div class="container">
+    <h1 class="text-center pt-2 fw-bold text-gradient d-sm-block">
+      Recommended Jobs
+    </h1>
     <div class="row pb-5">
       <!-- Filter Sidebar -->
       <div class="col-lg-3 mt-4 d-none d-lg-block">
@@ -170,6 +173,7 @@
                       <i class="bi bi-clock"></i> <small class="text-muted" data-created-at="{{ j.created_at|date:'c' }}"></small>
                     </div>
                     <a href="{% url 'wera_detail' j.slug %}" class="btn btn-primary btn-sm">View Details</a>
+                    <!-- <a href="{% url 'wera_detail' j.slug %}" class="btn btn-dark btn-sm">Apply</a> -->
                   </div>
                 </div>
               </div>
