feat: some email reminder utils

--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -16,32 +16,10 @@
     />
     <meta
       name="keywords"
-      content="social hiring platform, job opportunities for students, hire university talent, professional networking, freelance contracts, part-time jobs, business talent solutions, skill development, flexible work, innovation in recruitment, jobs in Nairobi, jobs in Kenya, jobs in Africa, Social hiring platform
-
-    Job platform for university students,
-
-    Part-time jobs for students,
-
-    Freelance opportunities for professionals,
-
-    Affordable talent for businesses,
-
-    Skill development for students,
-
-    Remote jobs for students,
-
-    Professional networking platform,
-    Best platform for student part-time jobs
-,
-How to hire university students for businesses,
-
-Affordable freelance professionals near me,
-
-Remote work opportunities for students,
-
-Skill-building jobs for students,
-
-Top job platforms for professionals and students"
+      content="wera, kupata wera, jobos, social hiring platform, job opportunities for students, hire university talent, professional networking, freelance contracts, part-time jobs, business talent solutions, skill development, flexible work, innovation in recruitment, jobs in Nairobi, jobs in Kenya, jobs in Africa, Social hiring platform, Job platform for university students,
+      Part-time jobs for students, Freelance opportunities for professionals, Affordable talent for businesses,Skill development for students,Remote jobs for students, Professional networking platform,
+    Best platform for student part-time jobs,How to hire university students for businesses,Affordable freelance professionals near me, Remote work opportunities for students, Skill-building jobs for students,
+    Top job platforms for professionals and students"
     />
     <meta name="author" content="Wera" />
 
@@ -75,9 +53,12 @@ Top job platforms for professionals and students"
       name="google-site-verification"
       content="gq9EoTdpglAB0oAgeZgCsdiPlb2CuI_E1bvGWGi-C88"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -88,6 +69,7 @@ Top job platforms for professionals and students"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    {% comment %}
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -106,6 +88,7 @@ Top job platforms for professionals and students"
       href="{% static 'images/favicon-16x16.png' %}"
     />
     <link rel="manifest" href="{% static 'images/site.webmanifest' %}" />
+    {% endcomment %}
     <style>
       :root {
         --primary: #2563eb;
@@ -2035,7 +2018,9 @@ Top job platforms for professionals and students"
           ><a href="{%  url 'report_a_problem' %}">Report a problem</a></small
         >
         <small><a href="{%  url 'advertising' %}">Advertising</a></small>
-        <small><a href="{%  url 'terms_of_service' %}">Terms of Service</a></small>
+        <small
+          ><a href="{%  url 'terms_of_service' %}">Terms of Service</a></small
+        >
       </div>
     </footer>
     <script>
