fix: report problem page

--- a/wera/templates/wera/report_a_problem.html
+++ b/wera/templates/wera/report_a_problem.html
@@ -1,6 +1,6 @@
 {% extends 'wera/base.html' %} {% block title %} Wera | Report a problem {% endblock %}  {% block content %}
 
-<section class="contact-section section_padding">
+<section class="contact-section">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -88,7 +88,7 @@
         <div class="media contact-info">
           <span class="contact-info__icon"><i class="bi bi-tablet"></i></span>
           <div class="media-body">
-            <h3>0759701314</h3>
+            <h3></h3>
             <p>24/7</p>
           </div>
         </div>
