fix: improve SEO

--- a/wera/templates/wera/advertising.html
+++ b/wera/templates/wera/advertising.html
@@ -1,4 +1,4 @@
-{% extends 'wera/base.html' %} {% block title %} Wera | Advertising{% endblock %} {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera - Advertising{% endblock %} {% load static %} {% block content %}
 <style>
     h1, h2 {
         text-align: center;
