--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -16,7 +16,7 @@
     />
     <meta
       name="keywords"
-      content="wera, kupata wera, jobos, social hiring platform, job opportunities for students, hire university talent, professional networking, freelance contracts, part-time jobs, business talent solutions, skill development, flexible work, innovation in recruitment, jobs in Nairobi, jobs in Kenya, jobs in Africa, Social hiring platform, Job platform for university students,
+      content="wera, Wera on-demand services Kenya, kupata wera, jobos, social hiring platform, job opportunities for students, hire university talent, professional networking, freelance contracts, part-time jobs, business talent solutions, skill development, flexible work, innovation in recruitment, jobs in Nairobi, jobs in Kenya, jobs in Africa, Social hiring platform, Job platform for university students,
       Part-time jobs for students, Freelance opportunities for professionals, Affordable talent for businesses,Skill development for students,Remote jobs for students, Professional networking platform,
     Best platform for student part-time jobs,How to hire university students for businesses,Affordable freelance professionals near me, Remote work opportunities for students, Skill-building jobs for students,
     Top job platforms for professionals and students"
@@ -26,14 +26,14 @@
     <!-- Open Graph Metadata -->
     <meta
       property="og:title"
-      content="Wera | Empowering Communities through Social Hiring"
+      content="Wera - Africa’s Leading Job Platform"
     />
     <meta
       property="og:description"
       content="Revolutionizing the job market by bridging the gap between aspiring professionals, businesses, and clients. Wera offers opportunities for students, businesses, and professionals to connect, grow, and succeed."
     />
-    <meta property="og:image" content="[URL-to-logo-or-image]" />
-    <meta property="og:url" content="[Your-platform-URL]" />
+    {% comment %} <meta property="og:image" content="[URL-to-logo-or-image]" />
+    <meta property="og:url" content="[Your-platform-URL]" /> {% endcomment %}
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Metadata -->
@@ -46,7 +46,7 @@
       name="twitter:description"
       content="Join Wera to find part-time jobs, hire skilled professionals, or grow your network. Explore a seamless platform where talent meets opportunity."
     />
-    <meta name="twitter:image" content="[URL-to-logo-or-image]" />
+    {% comment %} <meta name="twitter:image" content="[URL-to-logo-or-image]" /> {% endcomment %}
     <meta name="twitter:site" content="@wera" />
 
     <meta
