--- a/wera/templates/wera/error_404.html
+++ b/wera/templates/wera/error_404.html
@@ -1,3 +1,3 @@
-{% extends 'wera/base.html' %} {% block title %} Wera | 404 {% endblock %}  {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera - 404 {% endblock %}  {% load static %} {% block content %}
 
 {% endblock %}
