--- a/wera/templates/wera/privacy_policy.html
+++ b/wera/templates/wera/privacy_policy.html
@@ -1,4 +1,4 @@
-{% extends 'wera/base.html' %} {% block title %} Wera | Privacy Policy {%endblock %} {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera - Privacy Policy {%endblock %} {% load static %} {% block content %}
 
 <h1>Privacy Policy</h1>
 <p>Last Updated: 30/1/2025</p>
@@ -104,5 +104,13 @@
     <a href="mailto:support@wera.co.ke">support@wera.co.ke</a>.
   </p>
 </div>
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Cookie Policy",
+  "description": "Learn about our cookie policy.",
+  "url": "https://wera.co.ke/cookie-policy/"
+}
+</script>
 {% endblock %}
