--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -53,12 +53,9 @@
       name="google-site-verification"
       content="gq9EoTdpglAB0oAgeZgCsdiPlb2CuI_E1bvGWGi-C88"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap"
-      rel="stylesheet"
-    />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -99,7 +96,7 @@
       }
 
       body {
-        font-family: "Hammersmith One", serif !important;
+        font-family: "Didact Gothic", serif; !important;
         font-optical-sizing: auto;
         font-style: normal;
         font-weight: 400;
