fix: add arrow right on view details

--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -171,7 +171,7 @@
                     <div class="date">
                       <i class="bi bi-clock"></i> <small class="text-muted" data-created-at="{{ j.created_at|date:'c' }}"></small>
                     </div>
-                    <a href="{% url 'wera_detail' j.slug %}" class="btn btn-primary btn-sm">View Details</a>
+                    <a href="{% url 'wera_detail' j.slug %}" class="btn btn-primary btn-sm">View Details <i class="bi bi-arrow-right"></i></a>
                     <!-- <a href="{% url 'wera_detail' j.slug %}" class="btn btn-dark btn-sm">Apply</a> -->
                   </div>
                 </div>
