--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -13,7 +13,7 @@ load static %} {% block content %}
     <!-- Profile Card -->
     {% for profile in contacts %} {% if profile.phone %}
     <div class="col-md-4 col-lg-3">
-      <div class="card h-100 shadow-sm border-0 hover-scale">
+      <div class="card h-100 mb-2">
         <!-- Profile Image -->
         <div class="text-center pt-4">
           {% if profile.image %}
