--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -50,7 +50,7 @@
     <h1 class="text-center pt-2 fw-bold text-gradient d-sm-block">
       Recommended Jobs
     </h1>
-    <div class="row pb-5">
+    <div class="row">
       <!-- Filter Sidebar -->
       <div class="col-lg-3 mt-4 d-none d-lg-block">
         <div class="filter-sidebar bg-white p-4 rounded shadow-sm">
@@ -155,28 +155,27 @@
         </div>
       </div>
     </div>
-    <div class="text-center my-3">
+    <div class="text-center mb-5  pb-5">
       {% if weras.has_previous %}
-      <a href="?page=1" class="btn btn-outline-primary">
+      <a href="?page=1" class="btn btn-outline-primary d-block d-sm-inline-block mb-2">
         <i class="bi bi-chevron-double-left"></i> First
       </a>
-      <a href="?page={{ weras.previous_page_number }}" class="btn btn-outline-primary">
+      <a href="?page={{ weras.previous_page_number }}" class="btn btn-outline-primary d-block d-sm-inline-block mb-2">
         <i class="bi bi-chevron-left"></i> Previous
       </a>
       {% endif %}
 
-      <span class="mx-2 fw-bold">Page {{ weras.number }} of {{ weras.paginator.num_pages }}</span>
+      <span class="mx-2 fw-bold d-block d-sm-inline-block">Page {{ weras.number }} of {{ weras.paginator.num_pages }}</span>
 
       {% if weras.has_next %}
-      <a href="?page={{ weras.next_page_number }}" class="btn btn-outline-primary">
+      <a href="?page={{ weras.next_page_number }}" class="btn btn-outline-primary d-block d-sm-inline-block mb-2">
         Next <i class="bi bi-chevron-right"></i>
       </a>
-      <a href="?page={{ weras.paginator.num_pages }}" class="btn btn-outline-primary">
+      <a href="?page={{ weras.paginator.num_pages }}" class="btn btn-outline-primary d-block d-sm-inline-block mb-2">
         Last <i class="bi bi-chevron-double-right"></i>
       </a>
       {% endif %}
     </div>
-
   </div>
 </div>
 
