--- a/wera/templates/wera/report_a_problem.html
+++ b/wera/templates/wera/report_a_problem.html
@@ -38,7 +38,7 @@
                   id="name"
                   type="text"
                   onfocus="this.placeholder = ''"
-                  onblur="this.placeholder = 'enter your name'"
+                  onblur="this.placeholder = 'Enter your name'"
                   placeholder="enter your name"
                 />
               </div>
@@ -51,7 +51,7 @@
                   id="email"
                   type="email"
                   onfocus="this.placeholder = ''"
-                  onblur="this.placeholder = 'enter email address'"
+                  onblur="this.placeholder = 'Enter email address'"
                   placeholder="Enter email address"
                 />
               </div>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="form-group mt-3">
-            <button type="submit" class="btn btn-primary w-100">
+            <button type="submit" class="btn btn-outline-primary w-100">
               Send Message
             </button>
           </div>
