--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -2,10 +2,10 @@
 load static %} {% block content %}
 
 <div class="container pt-4 pb-5">
-  <h1 class="text-center mb-4 fw-bold text-gradient">
+  <h4 class="text-center fw-bold text-gradient">
     Find a Freelancer or Business
-  </h1>
-  <p class="text-center lead text-muted mb-5">
+  </h4>
+  <p class="text-center lead text-muted mb-2">
     Connect with skilled professionals for your tasks or jobs.
   </p>
 
@@ -24,12 +24,10 @@ load static %} {% block content %}
             style="width: 100px; height: 100px; object-fit: cover"
           />
           {% else %}
-          <div
-            class="rounded-circle bg-light d-inline-flex align-items-center justify-content-center"
-            style="width: 100px; height: 100px"
-          >
-            <i class="bi bi-person-fill text-muted" style="font-size: 3rem"></i>
-          </div>
+              <div class="bg-secondary text-white d-inline-block rounded-circle"
+                style="width: 120px; height: 120px; line-height: 120px; font-size: 36px;">
+                {{ profile.user.first_name|first|upper }}{{ profile.user.last_name|first|upper }}
+              </div>
           {% endif %}
         </div>
 
@@ -42,20 +40,21 @@ load static %} {% block content %}
 
           <!-- Skills/Tags -->
           <div class="mb-3">
-            <span class="badge bg-primary me-1">Design</span>
-            <span class="badge bg-primary me-1">Development</span>
-            <span class="badge bg-primary">Marketing</span>
+            {% for skill in profile.skills %}
+            <span class="badge bg-primary me-1">{{skill}}</span>
+            {% endfor %}
           </div>
 
           <!-- Contact Button -->
           <div class="mt-auto">
-            <a href="tel:{{ profile.phone }}" class="btn btn-primary w-100">
+            <a href="tel:{{ profile.phone }}" class="btn btn-outline-primary w-100">
               <i class="bi bi-telephone-outbound-fill"></i> Contact Me
             </a>
           </div>
         </div>
       </div>
     </div>
+    <br>
     {% endif %} {% empty %}
     <div class="col-12 text-center py-5">
       <div class="bg-light p-5 rounded">
