--- a/wera/templates/wera/advertising.html
+++ b/wera/templates/wera/advertising.html
@@ -64,7 +64,7 @@
   </div>
 
   <div class="text-center pt-5">
-    <a href="mailto:support@wera.co.ke" class="btn btn-primary">Partner with Us</a>
+    <a href="mailto:support@wera.co.ke" class="btn btn-outline-primary">Partner with Us</a>
   </div>
 
   <div class="contact">
